# imdbdump

./: .coveralls.yml  .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
imdbdump/: imdb_fetcher.py
test/: expected_die_sopranos.csv  expected_firefly:_der_aufbruch_der_serenity.csv  expected_firefly:_der_aufbruch_der_serenity.json  expected_the_sopranos.json  test_csv.py  test_json.py
