[tool.poetry]
name = "imdbdump"
version = "0.1.0"
description = ""
authors = ["Marco Schanz <mschanz1210@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
twine = "^1.13"
pytest = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
